--- a/apps/wagtail_client/wagtail_client/templates/wagtail_client/home.html
+++ b/apps/wagtail_client/wagtail_client/templates/wagtail_client/home.html
@@ -13,14 +13,54 @@
             <a class="button" href="{% url 'oidc_authentication_init' %}">Login</a>
         {% endif %}
 
-        <h2 class="help">Are you a new user? Register here:</h2>
         {% comment %}
             TODO once sure how we want to demo it, a management command should suffice, wagtail can build pages.
         {% endcomment %}
-
+        <br />
+        <br />
+        <h2 class="help">Are you a new user? Register here:</h2>
+        <p class="help">Customise your registration experience</p>
+        <div>
+            <p>Toggle some options:</p>
+            <input id="security" type="checkbox" value="security" checked>High security<br>
+            <input id="show2fa" type="checkbox" value="show2fa">Show two factor auth<br>
+            <input id="redirect" type="checkbox" value="redirect" checked>Redirect back here?<br>
+            <br />
+            <p>Pick a theme:</p>
+            <select id="theme">
+                <option value="django">Django theme</option>
+                <option value="ge">Horrid black theme</option>
+                <option value="none">No theme</option>
+            </select>
+        </div>
+        <br />
         <div class="submit">
-            <a class="button" href="http://172.18.0.3:8000/registration/?theme=django&security=high&redirect_url=http://172.18.0.4:8000/">High security register</a>
-            <a class="button" href="http://172.18.0.3:8000/registration/?theme=django&redirect_url=http://172.18.0.4:8000/">Register</a>
+            <a id="redirectButton" class="button" href="http://172.18.0.3:8000/registration/?redirect_url=http://172.18.0.4:8000/">Custom Register</a>
         <div>
     </div>
+{% endblock %}
+{% block extra_js %}
+{{ block.super }}
+<script>
+    // Hard coded like this is fine for demo purposes.
+    document.addEventListener('DOMContentLoaded', function(event) {
+        document.getElementById('redirectButton').addEventListener('click', function(e) {
+            e.preventDefault()
+            var href = 'http://172.18.0.3:8000/registration/';
+            var theme = document.getElementById('theme').value;
+            href += '?theme=' + theme;
+            if (document.getElementById('security').checked) {
+                href += '&security=high';
+            }
+            if (document.getElementById('show2fa').checked) {
+                href += '&show2fa=true';
+            }
+            if (document.getElementById('redirect').checked) {
+                href += '&redirect_url=http://172.18.0.4:8000/';
+            }
+            console.info(href);
+            window.location.href = href
+        });
+    });
+</script>
 {% endblock %}
