feature/GE-684: Changed button text

--- a/apps/wagtail_client/wagtail_client/templates/wagtail_client/home.html
+++ b/apps/wagtail_client/wagtail_client/templates/wagtail_client/home.html
@@ -35,7 +35,7 @@
         </div>
         <br />
         <div class="submit">
-            <a id="redirectButton" class="button" href="http://172.18.0.3:8000/registration/?redirect_url=http://172.18.0.4:8000/">Custom Register</a>
+            <a id="redirectButton" class="button" href="http://172.18.0.3:8000/registration/?redirect_url=http://172.18.0.4:8000/">Register</a>
         <div>
     </div>
 {% endblock %}
