feature/GE-684: Added TODO for later in demo apps life

--- a/apps/wagtail_client/wagtail_client/templates/wagtail_client/home.html
+++ b/apps/wagtail_client/wagtail_client/templates/wagtail_client/home.html
@@ -43,6 +43,7 @@
 {{ block.super }}
 <script>
     // Hard coded like this is fine for demo purposes.
+    // TODO The redirect urls will need to be updated from context later on.
     document.addEventListener('DOMContentLoaded', function(event) {
         document.getElementById('redirectButton').addEventListener('click', function(e) {
             e.preventDefault()
