--- a/apps/wagtail_client/wagtail_client/templates/wagtail_client/home.html
+++ b/apps/wagtail_client/wagtail_client/templates/wagtail_client/home.html
@@ -6,37 +6,39 @@
 
 {% block furniture %}
     <div class="content-wrapper">
-        <h1>Welcome to the home page</h1>
         {% if user.is_authenticated %}
-            <h1>Current user: {{ user.email }}</h1>
+            <h1>Welcome back!</h1>
+            <h1>email: {{ user.email }}</h1>
+            <h1>{{ user }}</h1>
         {% else %}
+            <h1>Welcome to the home page</h1>
             <a class="button" href="{% url 'oidc_authentication_init' %}">Login</a>
-        {% endif %}
 
-        {% comment %}
-            TODO once sure how we want to demo it, a management command should suffice, wagtail can build pages.
-        {% endcomment %}
-        <br />
-        <br />
-        <h2 class="help">Are you a new user? Register here:</h2>
-        <p class="help">Customise your registration experience</p>
-        <div>
-            <p>Toggle some options:</p>
-            <input id="security" type="checkbox" value="security" checked>High security<br>
-            <input id="show2fa" type="checkbox" value="show2fa">Show two factor auth<br>
-            <input id="redirect" type="checkbox" value="redirect" checked>Redirect back here?<br>
+            {% comment %}
+                TODO once sure how we want to demo it, a management command should suffice, wagtail can build pages.
+            {% endcomment %}
             <br />
-            <p>Pick a theme:</p>
-            <select id="theme">
-                <option value="django">Django theme</option>
-                <option value="ge">Horrid black theme</option>
-                <option value="none">No theme</option>
-            </select>
-        </div>
-        <br />
-        <div class="submit">
-            <a id="redirectButton" class="button" href="http://172.18.0.3:8000/registration/?redirect_url=http://172.18.0.4:8000/">Register</a>
-        <div>
+            <br />
+            <h2 class="help">Are you a new user? Register here:</h2>
+            <p class="help">Customise your registration experience</p>
+            <div>
+                <p>Toggle some options:</p>
+                <input id="security" type="checkbox" value="security" checked>High security<br>
+                <input id="show2fa" type="checkbox" value="show2fa">Show two factor auth<br>
+                <input id="redirect" type="checkbox" value="redirect" checked>Redirect back here?<br>
+                <br />
+                <p>Pick a theme:</p>
+                <select id="theme">
+                    <option value="django">Django theme</option>
+                    <option value="ge">Horrid black theme</option>
+                    <option value="none">No theme</option>
+                </select>
+            </div>
+            <br />
+            <div class="submit">
+                <a id="redirectButton" class="button" href="http://172.18.0.3:8000/registration/?redirect_url=http://172.18.0.4:8000/">Register</a>
+            <div>
+        {% endif %}
     </div>
 {% endblock %}
 {% block extra_js %}
